<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:typeface="serif"
        android:orientation="vertical">

        <!-- title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:isScrollContainer="false"
            android:text="@string/title"
            android:textSize="38sp"
            android:typeface="serif" />

        <!-- price -->
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="0dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="serif" />

        <LinearLayout
            android:id="@+id/innerLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <!-- Digit -->
            <TextView
                android:id="@+id/digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/digit"
                android:textColor="@color/orange"
                android:textSize="28sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/orange_2"
                android:layout_marginTop="10dp"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textColorLink="@color/white"
                android:textSize="22sp"
                android:typeface="serif" />
        </LinearLayout>



        <!-- Text choose payment -->
        <TextView
            android:id="@+id/action_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="0dp"
            android:text="@string/choose_method"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:typeface="serif" />



        <!-- RadioGroup with payment options -->
        <RadioGroup
            android:id="@+id/payment_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorLink="@color/orange"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_paypal"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:padding="2dp"
                android:text="@string/paypal"
                android:typeface="serif" />

            <RadioButton
                android:id="@+id/radio_credit_card"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/border"
                android:padding="2dp"
                android:text="@string/mastercard"/>

            <RadioButton
                android:id="@+id/radio_visa"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@drawable/border"
                android:padding="2dp"
                android:text="@string/visa"
                android:typeface="serif"
                />

        </RadioGroup>

        <!-- Text card numbers -->
        <TextView
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/card_number"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:typeface="serif" />

        <!--Text box-->
        <EditText
            android:id="@+id/editText_number_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="creditCardNumber"
            android:background="@drawable/border"
            android:hint="@string/example_number_Card"
            android:inputType="number"
            android:maxLength="19" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:typeface="serif"
                android:text="@string/exp_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cvv"
                android:typeface="serif"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <!--Text box-->
            <EditText
                android:id="@+id/date_box"
                android:layout_width="108dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="creditCardExpirationDate"
                android:background="@drawable/border"
                android:hint="@string/example_month_year"
                android:inputType="date" />

            <EditText
                android:id="@+id/editText_cvv"
                android:layout_width="99dp"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="35dp"
                android:autofillHints="creditCardSecurityCode"
                android:background="@drawable/border"
                android:hint="@string/example_cvv"
                android:inputType="textPassword"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:typeface="serif"
            android:text="@string/name_person"/>

        <!--Text box-->
        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:hint="@string/example_name"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/save_card"
            android:typeface="serif" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/orange"
            android:text="@string/add_card"
            android:typeface="serif" />
    </LinearLayout>
</ScrollView>
